Allow user to force reading mov alias from absolute path.

Based on a work-around by Alex Zhukov.

Fixes ticket #935